force-app/main/default/objects/Campaign/fields/CampID__c.field-meta.xml
<CustomField>
    <fullName>CampID__c</fullName>
    <description>CampId coming from Blackbaud for data migration purposes</description>
    <externalId>true</externalId>
    <label>CampID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>