force-app/main/default/objects/Campaign/fields/EventGoal__c.field-meta.xml
<CustomField>
    <fullName>EventGoal__c</fullName>
    <label>EventGoal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>