force-app/main/default/objects/Campaign/fields/eventType__c.field-meta.xml
<CustomField>
    <fullName>eventType__c</fullName>
    <label>eventType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Great Commission Weekend</fullName>
            </value>
            <value>
                <fullName>Vision Trip</fullName>
            </value>
            <value>
                <fullName>Development Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>