force-app/main/default/objects/Campaign/fields/isEvent__c.field-meta.xml
<CustomField>
    <fullName>isEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEvent</label>
    <type>Checkbox</type>
</CustomField>